@@ -854,7 +854,7 @@ BATgroup_internal(BAT **groups, BAT **extents, BAT **histo,
 
 		/* not sorted, and no pre-existing hash table: we'll
 		 * build an incomplete hash table on the fly--also see
-		 * BATassertHeadProps and BATderiveHeadProps for
+		 * BATassertTailProps and BATderiveTailProps for
 		 * similar code;
 		 * we also exploit if g is clustered */
 		ALGODEBUG fprintf(stderr, "#BATgroup(b=%s#" BUNFMT ","
