@@ -1223,7 +1223,7 @@ RMTinternalcopyfrom(BAT **ret, char *hdr, stream *in)
 		mnstr_printf(GDKout, "!MALexception:remote.bincopyfrom: expected flush, got: %c\n", tmp);
 	}
 
-	BATderiveHeadProps(b, 1);
+	BATderiveTailProps(b, 1);
 
 	*ret = b;
 	return(MAL_SUCCEED);
